# trash

./: CMakeLists.txt  README.md  defines.h  file_wrapper.cpp  file_wrapper.h  get1.sh  logging.cpp  logging.h  main.c  main.cpp  multithreading.cpp  multithreading.h  response.cpp  response.h  run_for_mailru.sh  server.c  server.cpp  server.h  server_classes.h  start_mail.sh  update.sh  utils.c  utils.cpp  utils.h
